Fix shop name wrapping, closes #30

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 .shop-name {
-  text-align: center;
+  text-align: left;
   flex: 1;
+  max-width: 60%;
 }
 .shop-name a:focus,
 .shop-name a {
